--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -17,7 +17,7 @@
 header {
     display: flex;
     width: 100%;
-    height: 80px;
+    height: 70px;
     background-color: var(--bg-header);
 }
 
@@ -133,10 +133,45 @@ section {
     margin-top: 40px;   
 }
 
-.small-content p{
+.small-content p {
     font-size: 12px;
     font-family: 'Lato' sans-serif;
     color: var(--txt-color);
     text-align: initial;
 }
 
+.img-spotify {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+    background-color: var(--bg-color);
+}
+
+.img-spotify img {
+    width: 70%;
+}
+
+@media(max-widht:768px){
+    ul{
+        display: none;
+    }
+    .config{
+        display: flex;
+        color:var(--txt-color);
+        font-size: 30px;
+        margin-right: 10px;
+        
+    }
+}
+
+@media (max-widht:1201px){
+        section{
+        display: flex;
+        flex-direction: column;
+    }
+    .img-spotify img{
+        width: 70%;
+        margin:auto;
+    }
+}
