--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -152,6 +152,27 @@ section {
     width: 70%;
 }
 
+/*section-2*/
+.section-info{
+    display: flex;
+    padding: 40px;
+    background-color: #fff;
+}
+
+title-section-info{
+    text-align:center;
+    margin: auto;
+    margin-top: 80px;
+}
+
+.title-content h2{
+    fonte-size: 35px;
+    font-weight: 900;
+    font-family: 'Lato',sans-serif ;
+    letter-spacing: '1px';
+}
+
+
 @media(max-widht:768px){
     ul{
         display: none;
